# ecrsgen

./: .gitignore  CMakeLists.txt  ecrsgen.cpp  haar.txt  haar.xml  haarcheck.cpp  haarevaluator.cpp  haarevaluator.h  haargen.cpp  haarwavelet.cpp  haarwavelet.h  haarwaveletviewer.cpp  main.cpp  produce_plots.m  test.cpp
data/: haarwavelets-2d.txt  sumario.ods
lib/: detector.cpp  detector.h  haarwavelet.cpp  haarwavelet.h  haarwaveletutilities.h
stock/: haarevaluator.cpp  haarevaluator.h  myhaarevaluator.cpp  myhaarevaluator.h  trial.cpp
